Update default page

--- a/app/ce-ui/src/App.css
+++ b/app/ce-ui/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.App-nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-nav li {
+  float: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-nav li a {
+  display: block;
+  color: ghostwhite;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.App-nav li a:hover {
+  color: #282c34;
+  background-color: #bbc73a;
+}
+
+.App-nav-float_right {
+  float: right !important;
+}
+
+.App-nav-float_right a:hover {
+  color: ghostwhite;
+  background-color: brown !important;
+}
+
+.App-footer {
+  font-size: smaller;
+  color: #777;
+  margin-top: 50px;
+  text-align: center;
 }
