--- a/app/ce-ui/src/index.css
+++ b/app/ce-ui/src/index.css
@@ -1,10 +1,9 @@
 body {
-  background-color: #333;
+  background-color: #363636;
   color: ghostwhite;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,4 +11,15 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  color: #2d72ff;
+  padding:2px;  
+}
+
+a:hover {
+  color: #282c34;
+  background-color: #2d72ff;
+  text-decoration: none;
 }
