--- a/app/ce-ui/src/App.css
+++ b/app/ce-ui/src/App.css
@@ -65,7 +65,12 @@
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
 }
-
+.image_box {
+  max-width: 1000px;
+  margin-left:auto;
+  margin-right:auto;
+  border-radius: 1em;
+}
 .common {
   color: #31ff00;
 }
