--- a/app/ce-ui/src/App.css
+++ b/app/ce-ui/src/App.css
@@ -60,6 +60,7 @@
   padding: 1em;
   line-height: 1.5em;
   margin-top: 0;
+  margin-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
   border-bottom-left-radius: 1em;
