--- a/app/ce-ui/src/App.css
+++ b/app/ce-ui/src/App.css
@@ -1,3 +1,20 @@
+
+.player_epgp {
+ display: inline-block;
+ list-style-type: none;
+}
+
+.player_epgp ul {
+  background-color: #202020;
+  font-size:larger;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border-bottom: 1px solid #363636;
+}
+
+
 .navbar {
   /*position: fixed;*/
   width: 100%;
