--- a/app/ce-ui/src/App.css
+++ b/app/ce-ui/src/App.css
@@ -72,7 +72,7 @@
 }
 .content {
   background-color: #202020;
-  max-width: 1000px;
+  max-width: 1200px;
   padding: 1em;
   line-height: 1.5em;
   margin-top: 0;
@@ -82,8 +82,11 @@
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
 }
+.image_wrapper {
+  width: 100%;
+}
 .image_box {
-  max-width: 1000px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 0.5em;
