--- a/app/ce-ui/src/pages/styles/bench.css
+++ b/app/ce-ui/src/pages/styles/bench.css
@@ -3,43 +3,36 @@
 } */
 
 .role_layout ul {
-    /*background-color: green;*/
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .role_layout li {
-    /* background-color: blue; */
-    display: inline-block;
-    margin-left: 2%;
-    width: 30%;
-    min-width: 220px;
-  }
-  
-  .role_icon {
-    height: 32px;
-    margin-bottom: -6px;
-    padding-right: 10px;
-  }
-  
-  .bench_layout ul {
-    /*background-color: green;*/
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .bench_layout li {
-    /* background-color: blue; */
-    display: inline-block;
-    margin-left: 2%;
-    min-width: 220px;
-  }
-  
-  .role_icon {
-    height: 32px;
-    margin-bottom: -6px;
-    padding-right: 10px;
-  }
-  
+  /*background-color: green;*/
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.role_layout li {
+  /* background-color: blue; */
+  display: inline-block;
+  margin-left: 2%;
+  width: 30%;
+  min-width: 220px;
+}
+
+.role_icon {
+  height: 32px;
+  margin-bottom: -6px;
+  padding-right: 10px;
+}
+
+.role_icon {
+  height: 32px;
+  margin-bottom: -10px;
+  padding-right: 10px;
+}
+
+.tab_content {
+  margin: -10px 0 0 0;
+  background-color: #111111;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 1%;
+}
