--- a/app/ce-ui/src/pages/styles/bench.css
+++ b/app/ce-ui/src/pages/styles/bench.css
@@ -13,7 +13,7 @@
   /* background-color: blue; */
   display: inline-block;
   margin-left: 2%;
-  width: 30%;
+/*  width: 30%;*/
   min-width: 220px;
   vertical-align: top;
 }
