--- a/app/ce-ui/src/pages/styles/bench.css
+++ b/app/ce-ui/src/pages/styles/bench.css
@@ -9,11 +9,16 @@
   padding: 0;
 }
 
+@media only screen and (min-width: 1000px) {
+  .role_layout li {
+    width: 30%;
+  }
+}
+
 .role_layout li {
   /* background-color: blue; */
   display: inline-block;
   margin-left: 2%;
-/*  width: 30%;*/
   min-width: 220px;
   vertical-align: top;
 }
