--- a/app/ce-ui/src/pages/styles/bench.css
+++ b/app/ce-ui/src/pages/styles/bench.css
@@ -42,3 +42,23 @@
   border-bottom-right-radius: 10px;
   padding: 1%;
 }
+
+.role_icon_smallish{
+  height: 30px;
+  /* margin-top: -20px; */
+/*   margin-bottom: 10px;
+  padding-right: 10px; */
+}
+.role_row {
+  font-size: larger;
+  line-height: 30px;
+  /* margin-top: -30px; */
+  vertical-align: top;
+}
+.role_text {
+  margin-top: -20px;
+  font-size: large;
+  line-height: 30px;
+  /* margin-top: -30px; */
+  vertical-align: top;
+}
